<resources>
    <string name="app_name">Memento</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="Memos">Memos</string>
    <string name="Snoozed">Snoozed</string>
    <string name="Done">Done</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="title_activity_weather">WeatherActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_maps">I\'m feeling lucky</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_user_settings">Settings</string>
    <string name="pref_country">Country</string>
    <string name="pref_notif">Notifications</string>
    <string name="pref_user_email">E-mail</string>
    <string name="pref_user_name">Name</string>
    <string name="pref_user_picture">Picture</string>
    <string name="pref_vibrate">VIbrate</string>
</resources>
